--- a/scilab/modules/metanet/locales/en_US/metanet.pot
+++ b/scilab/modules/metanet/locales/en_US/metanet.pot
@@ -14,12 +14,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-01-27 10:37+0100\n"
+"Revision-Date: 2009-10-20 13:47+0100\n"
 
-# File: etc/metanet.start, line: 24
-msgid "Metanet"
-msgstr ""
-#
 # File: macros/editor/ge_create_menus.sci, line: 13
 msgid "&File"
 msgstr ""
@@ -67,108 +63,117 @@ msgstr ""
 msgid "%s: Third argument must be a vector with positive integer values.\n"
 msgstr ""
 #
-# File: src/c/connex.c, line: 22
-# File: src/c/dmtree.c, line: 36
-# File: src/c/dmtree.c, line: 40
-# File: src/c/dmtree.c, line: 44
-# File: src/c/dmtree.c, line: 48
-# File: src/c/dmtree.c, line: 52
-# File: src/c/dmtree.c, line: 56
-# File: src/c/dmtree.c, line: 60
-# File: src/c/dmtree.c, line: 64
-# File: src/c/loadg.c, line: 81
-# File: src/c/loadg.c, line: 142
-# File: src/c/loadg.c, line: 148
-# File: src/c/loadg.c, line: 153
-# File: src/c/loadg.c, line: 158
-# File: src/c/loadg.c, line: 163
-# File: src/c/loadg.c, line: 168
-# File: src/c/loadg.c, line: 173
-# File: src/c/loadg.c, line: 178
-# File: src/c/loadg.c, line: 184
+# File: src/c/saveg.c, line: 55
+# File: src/c/transc.c, line: 35
+# File: src/c/transc.c, line: 39
+# File: src/c/transc.c, line: 44
+# File: src/c/transc.c, line: 48
+# File: src/c/transc.c, line: 52
+# File: src/c/transc.c, line: 56
+# File: src/c/transc.c, line: 60
+# File: src/c/transc.c, line: 64
+# File: src/c/transc.c, line: 68
+# File: src/c/transc.c, line: 72
+# File: src/c/transc.c, line: 76
+# File: src/c/transc.c, line: 80
+# File: src/c/transc.c, line: 84
+# File: src/c/transc.c, line: 88
+# File: src/c/transc.c, line: 92
+# File: src/c/loadg.c, line: 95
+# File: src/c/loadg.c, line: 156
+# File: src/c/loadg.c, line: 162
+# File: src/c/loadg.c, line: 167
+# File: src/c/loadg.c, line: 172
+# File: src/c/loadg.c, line: 177
+# File: src/c/loadg.c, line: 182
+# File: src/c/loadg.c, line: 187
 # File: src/c/loadg.c, line: 192
 # File: src/c/loadg.c, line: 198
-# File: src/c/loadg.c, line: 203
-# File: src/c/loadg.c, line: 208
-# File: src/c/loadg.c, line: 213
-# File: src/c/loadg.c, line: 218
-# File: src/c/loadg.c, line: 223
-# File: src/c/loadg.c, line: 229
-# File: src/c/loadg.c, line: 234
-# File: src/c/loadg.c, line: 239
-# File: src/c/loadg.c, line: 244
-# File: src/c/loadg.c, line: 249
-# File: src/c/loadg.c, line: 254
-# File: src/c/loadg.c, line: 259
-# File: src/c/loadg.c, line: 281
-# File: src/c/loadg.c, line: 300
-# File: src/c/loadg.c, line: 309
+# File: src/c/loadg.c, line: 206
+# File: src/c/loadg.c, line: 212
+# File: src/c/loadg.c, line: 217
+# File: src/c/loadg.c, line: 222
+# File: src/c/loadg.c, line: 227
+# File: src/c/loadg.c, line: 232
+# File: src/c/loadg.c, line: 237
+# File: src/c/loadg.c, line: 243
+# File: src/c/loadg.c, line: 248
+# File: src/c/loadg.c, line: 253
+# File: src/c/loadg.c, line: 258
+# File: src/c/loadg.c, line: 263
+# File: src/c/loadg.c, line: 268
+# File: src/c/loadg.c, line: 273
+# File: src/c/loadg.c, line: 295
+# File: src/c/loadg.c, line: 314
 # File: src/c/loadg.c, line: 323
-# File: src/c/loadg.c, line: 371
-# File: src/c/loadg.c, line: 378
-# File: src/c/loadg.c, line: 402
+# File: src/c/loadg.c, line: 337
+# File: src/c/loadg.c, line: 385
+# File: src/c/loadg.c, line: 392
+# File: src/c/loadg.c, line: 416
+# File: src/c/connex.c, line: 26
+# File: src/c/dmtree.c, line: 39
+# File: src/c/dmtree.c, line: 44
+# File: src/c/dmtree.c, line: 49
+# File: src/c/dmtree.c, line: 54
+# File: src/c/dmtree.c, line: 59
+# File: src/c/dmtree.c, line: 64
+# File: src/c/dmtree.c, line: 69
+# File: src/c/dmtree.c, line: 74
 # File: src/c/paths.c, line: 59
 # File: src/c/paths.c, line: 79
 # File: src/c/paths.c, line: 91
 # File: src/c/paths.c, line: 127
 # File: src/c/paths.c, line: 205
 # File: src/c/paths.c, line: 222
-# File: src/c/saveg.c, line: 51
-# File: src/c/transc.c, line: 29
-# File: src/c/transc.c, line: 33
-# File: src/c/transc.c, line: 38
-# File: src/c/transc.c, line: 42
-# File: src/c/transc.c, line: 46
-# File: src/c/transc.c, line: 50
-# File: src/c/transc.c, line: 54
-# File: src/c/transc.c, line: 58
-# File: src/c/transc.c, line: 62
-# File: src/c/transc.c, line: 66
-# File: src/c/transc.c, line: 70
-# File: src/c/transc.c, line: 74
-# File: src/c/transc.c, line: 78
-# File: src/c/transc.c, line: 82
-# File: src/c/transc.c, line: 86
 msgid "Running out of memory"
 msgstr ""
 #
-# File: src/c/loadg.c, line: 56
-#, c-format
-msgid "\"%s\" is a directory"
-msgstr ""
-#
-# File: src/c/loadg.c, line: 70
-# File: src/c/saveg.c, line: 109
-#, c-format
-msgid "Directory \"%s\" does not exist"
-msgstr ""
-#
-# File: src/c/loadg.c, line: 89
-#, c-format
-msgid "Graph file \"%s/%s.graph\" does not exist"
-msgstr ""
-#
-# File: src/c/loadg.c, line: 104
-#, c-format
-msgid "Unable to open file \"%s/%s.graph\""
-msgstr ""
-#
-# File: src/c/loadg.c, line: 335
-# File: src/c/loadg.c, line: 345
-# File: src/c/saveg.c, line: 59
-# File: src/c/saveg.c, line: 67
+# File: src/c/saveg.c, line: 63
+# File: src/c/saveg.c, line: 71
+# File: src/c/loadg.c, line: 349
+# File: src/c/loadg.c, line: 359
 #, c-format
 msgid "Bad graph file. Node \"%s\" is duplicated"
 msgstr ""
 #
-# File: src/c/loadg.c, line: 386
-# File: src/c/loadg.c, line: 411
+# File: src/c/saveg.c, line: 84
+# File: src/c/saveg.c, line: 92
+# File: src/c/saveg.c, line: 115
+# File: src/c/loadg.c, line: 74
 #, c-format
-msgid "Bad graph file. Node \"%s\" referenced by arc \"%s\" not found"
+msgid "Could not get current working directory: %s\n"
 msgstr ""
 #
-# File: src/c/nometanet/nometanet.c, line: 19
-msgid "Scilab module metanet not installed.\n"
+# File: src/c/saveg.c, line: 125
+# File: src/c/loadg.c, line: 83
+#, c-format
+msgid "Directory \"%s\" does not exist"
+msgstr ""
+#
+# File: src/c/saveg.c, line: 146
+#, c-format
+msgid "Unable to write file in directory %s, check access"
+msgstr ""
+#
+# File: src/c/loadg.c, line: 65
+#, c-format
+msgid "\"%s\" is a directory"
+msgstr ""
+#
+# File: src/c/loadg.c, line: 103
+#, c-format
+msgid "Graph file \"%s/%s.graph\" does not exist"
+msgstr ""
+#
+# File: src/c/loadg.c, line: 118
+#, c-format
+msgid "Unable to open file \"%s/%s.graph\""
+msgstr ""
+#
+# File: src/c/loadg.c, line: 400
+# File: src/c/loadg.c, line: 425
+#, c-format
+msgid "Bad graph file. Node \"%s\" referenced by arc \"%s\" not found"
 msgstr ""
 #
 # File: src/c/paths.c, line: 49
@@ -184,7 +189,10 @@ msgstr ""
 msgid "Bad internal arc number %d"
 msgstr ""
 #
-# File: src/c/saveg.c, line: 130
-#, c-format
-msgid "Unable to write file in directory %s, check access"
+# File: src/c/nometanet/nometanet.c, line: 20
+msgid "Scilab module metanet not installed.\n"
+msgstr ""
+#
+# File: etc/metanet.start, line: 25
+msgid "Metanet"
 msgstr ""
